# till

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
scrapers/: pyproject.toml
scrapers/till_scrapers/: base.py  explore.py  registry.py  runner.py  testing.py
scrapers/till_scrapers/amex/: manifest.json  scraper.py
scrapers/till_scrapers/bofa/: manifest.json  scraper.py
scrapers/till_scrapers/chase/: manifest.json  scraper.py
scrapers/till_scrapers/etrade/: manifest.json  scraper.py
scrapers/till_scrapers/fidelity/: manifest.json  scraper.py
scrapers/till_scrapers/morganstanley/: manifest.json  scraper.py
scrapers/till_scrapers/schwab/: manifest.json  scraper.py
scrapers/till_scrapers/wellsfargo/: manifest.json  scraper.py
src/: config.rs  credentials.rs  db.rs  main.rs  pretty.rs  runner.rs  types.rs
